--- a/HabitatBuddy/HabitatBuddy/App.xaml
+++ b/HabitatBuddy/HabitatBuddy/App.xaml
@@ -29,12 +29,16 @@
 
             <Style TargetType="StackLayout" Class="ImageButtonLayout">
                 <Setter Property="Padding" Value="5"/>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
             </Style>
 
             <Style TargetType="Label" Class="ImageButtonLabel">
                 <Setter Property="TextColor" Value="{ StaticResource GeneralTextColor }" />
                 <Setter Property="FontSize" Value="Medium"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <!--set VerticalOptions to CenterAndExpand to make single-line text vertically centered-->
+                <Setter Property="VerticalOptions" Value="EndAndExpand"/>
                 <Setter Property="Margin" Value="0"/>
             </Style>
 
@@ -43,6 +47,7 @@
                 <Setter Property="CornerRadius" Value="8"/>
                 <Setter Property="Aspect" Value="Fill"/>
                 <Setter Property="HeightRequest" Value="150"/>
+                <Setter Property="VerticalOptions" Value="End"/>
             </Style>
             
             
