--- a/HabitatBuddy/HabitatBuddy/Views/OneIssuePage.xaml
+++ b/HabitatBuddy/HabitatBuddy/Views/OneIssuePage.xaml
@@ -3,17 +3,17 @@
    
         
         <StackLayout Margin="20" VerticalOptions="StartAndExpand">
-        <Label Text="Title" FontSize="24" TextColor="Maroon"/>
+        <Label Text="Title" FontSize="Large" TextColor="Maroon"/>
         <Label Text="{Binding Path=Title}" TextColor="Navy" FontSize="Medium"/>
         
-         <Label Text="Location" FontSize="24" TextColor="Maroon"/>
+         <Label Text="Location" FontSize="Large" TextColor="Maroon"/>
          <Label Text = "{Binding Path= Location}" IsEnabled="false" TextColor ="Navy" FontSize="Medium"/>
       
-         <Label Text="Category" FontSize="24" TextColor="Maroon"/>
+         <Label Text="Category" FontSize="Large" TextColor="Maroon"/>
          <Label Text = "{Binding Path= Category}" IsEnabled="false" TextColor="Navy" FontSize="Medium"/>
         <!--<Label Text="Done" />-->
        <!-- <Switch x:Name="doneSwitch" IsToggled="{Binding Path=Done}" />-->
-        <Label Text="Content" FontSize="24" TextColor="Maroon"/>
+        <Label Text="Content" FontSize="Large" TextColor="Maroon"/>
         <Label Text="{Binding Path= Content}" IsEnabled="false" VerticalOptions="FillAndExpand" TextColor="Navy" FontSize="Medium"/>
         
          <Button Text="All Issues" Clicked="AllIssuButton"/>
